# ubs-agent-validator

./: .gitignore  README.md  instructions.md  langgraph.json  pyproject.toml
sample_codes/: model.py
src/algotracer/: __init__.py  cli.py  pipeline.py
src/algotracer/analysis/: __init__.py  deps.py  entrypoints.py  side_effects.py  trace.py
src/algotracer/graph/: builder.py  cypher.py  neighborhood.py  resolver.py
src/algotracer/ingest/: __init__.py  ast_parser.py
src/algotracer/memgraph/: client.py
src/algotracer/rag/: __init__.py  config.py  embeddings.py  indexer.py  langgraph_app.py  retriever.py
src/algotracer/reasoning/: __init__.py  explainer.py  flow_explainer.py
src/algotracer/reporting/: __init__.py  renderer.py
tests/: test_ast_parser.py  test_pipeline.py  vc_test.py
tests/reports/: explanation.md  graph.cypher
