[project]
name = "algotracer"
version = "0.3.0"
description = "Agent-based static and structural analysis for ML pipelines"
authors = [{ name = "AlgoTracer Authors" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gqlalchemy",
    "python-dotenv",
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "langgraph",
    "langgraph-api",
    "langgraph-cli",
    "langsmith",
    "langchain-huggingface",
    "langchain-openai",
    "sentence-transformers",
    "faiss-cpu",
    "protobuf>=5.26.1,<6",
]

[project.optional-dependencies]
reporting = []

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "algotracer",
    "algotracer.graph",
    "algotracer.ingest",
    "algotracer.analysis",
    "algotracer.reasoning",
    "algotracer.memgraph",
    "algotracer.rag",
]

[tool.setuptools.package-data]
algotracer = ["py.typed"]

[project.scripts]
algotracer = "algotracer.cli:main"
